--- a/demo/Interception/Demo2/Demo2.csproj
+++ b/demo/Interception/Demo2/Demo2.csproj
@@ -13,12 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Dora.Interception\Dora.Interception.AspNetCore\Dora.Interception.AspNetCore.csproj" />
-    <ProjectReference Include="..\..\..\src\Dora.Interception\Dora.Interception\Dora.Interception.csproj" />
-    <ProjectReference Include="..\..\..\src\Dora.Interception\Dora.Interception.Castle\Dora.Interception.Castle.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Dora.Interception.AspNetCore" Version="1.0.0" />
+    <PackageReference Include="Dora.Interception.Castle" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
