--- a/demo/Interception/Demo3/Demo3.csproj
+++ b/demo/Interception/Demo3/Demo3.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dora.Interception.Castle" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.2.0-preview1-22942" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="1.2.0-preview1-22942" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.2.0-preview1-22942" />
