--- a/test/Caching/Dora.Caching.Test/Dora.Caching.Test.csproj
+++ b/test/Caching/Dora.Caching.Test/Dora.Caching.Test.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp1.1</TargetFramework>
+          <SignAssembly>True</SignAssembly>
+          <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.0" />
