Revise package information.

--- a/src/Dora.Interception/Dora.Interception.Castle/Dora.Interception.Castle.csproj
+++ b/src/Dora.Interception/Dora.Interception.Castle/Dora.Interception.Castle.csproj
@@ -10,6 +10,8 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <Product>Dora</Product>
+    <Version>1.1.0</Version>
+    <PackageTags>Dependency Injection, DI, AOP, Interception, Proxy, Castle, Dynamic Proxy</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
