--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Dora.ExceptionHandling.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Dora.ExceptionHandling.csproj
@@ -6,6 +6,11 @@
     <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <TreatSpecificWarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Dora.ExceptionHandling.Abstractions\Dora.ExceptionHandling.Abstractions.csproj" />
   </ItemGroup>
