--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Dora.ExceptionHandling.Abstractions.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Dora.ExceptionHandling.Abstractions.csproj
@@ -7,6 +7,12 @@
     <RootNamespace>Dora.ExceptionHandling</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <TreatSpecificWarningsAsErrors />
+    <DocumentationFile>bin\Debug\netcoreapp1.1\Dora.ExceptionHandling.Abstractions.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="..\..\Dora.Shared\Dora.Shared\CustomAttributeAccessor.cs" Link="shared\CustomAttributeAccessor.cs" />
     <Compile Include="..\..\Dora.Shared\Dora.Shared\Guard.cs" Link="shared\Guard.cs" />
@@ -15,6 +21,10 @@
 
   <ItemGroup>
     <Folder Include="shared\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
