1. Add XML comment; 2. Add Unit Test; 3. Add two built-in handlers

--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Dora.ExceptionHandling.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Dora.ExceptionHandling.csproj
@@ -9,6 +9,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <TreatSpecificWarningsAsErrors />
+    <DocumentationFile>bin\Debug\netcoreapp1.1\.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
