--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Mvc/Dora.ExceptionHandling.Mvc.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Mvc/Dora.ExceptionHandling.Mvc.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
