--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dora.Interception" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="1.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dora.ExceptionHandling.Abstractions\Dora.ExceptionHandling.Abstractions.csproj" />
+    <ProjectReference Include="..\Dora.ExceptionHandling\Dora.ExceptionHandling.csproj" />
   </ItemGroup>
 
   <ItemGroup>
