--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.ExceptionHandlers/Dora.ExceptionHandling.ExceptionHandlers.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.ExceptionHandlers/Dora.ExceptionHandling.ExceptionHandlers.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Dora.ExceptionHandling.Abstractions\Dora.ExceptionHandling.Abstractions.csproj" />
     <ProjectReference Include="..\Dora.ExceptionHandling.Configuration\Dora.ExceptionHandling.Configuration.csproj" />
     <ProjectReference Include="..\Dora.ExceptionHandling\Dora.ExceptionHandling.csproj" />
