--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Mvc/Dora.ExceptionHandling.Mvc.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Mvc/Dora.ExceptionHandling.Mvc.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
