--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Interception/Dora.ExceptionHandling.Interception.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Interception/Dora.ExceptionHandling.Interception.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
+    <Version>1.0.0-beta1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <TreatSpecificWarningsAsErrors />
+    <DocumentationFile>bin\Debug\netcoreapp1.1\Dora.ExceptionHandling.Interception.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
