--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Dora.ExceptionHandling.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling/Dora.ExceptionHandling.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
+    <Version>1.0.0-beta1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
