--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
+    <Version>1.0.0-beta1</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netcoreapp1.1\.xml</DocumentationFile>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <TreatSpecificWarningsAsErrors />
   </PropertyGroup>
 
   <ItemGroup>
