--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Dora.ExceptionHandling.Abstractions.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Dora.ExceptionHandling.Abstractions.csproj
@@ -1,17 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>    
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
-    <RootNamespace>Dora.ExceptionHandling.Abstractions</RootNamespace>
-    <Version>1.0.0-beta1</Version>
+    <Version>2.0.0-beta1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>Jiang Jin Nan</Authors>
+    <Company>Artech</Company>
+    <Product>Dora</Product>
+    <Description>Dora.ExceptionHandling is a policy driven automatic exception handling framework. This package provides the basic interfaces and classes of the abstract exception handling model.</Description>
+    <PackageLicenseUrl>http://www.doranet.org/nuget-license</PackageLicenseUrl>
+    <PackageProjectUrl>http://www.doranet.org</PackageProjectUrl>
+    <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
+    <PackageTags>Dora, Excpetion Handling</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <TreatSpecificWarningsAsErrors />
-    <DocumentationFile>bin\Debug\netcoreapp1.1\Dora.ExceptionHandling.Abstractions.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp2.0\Dora.ExceptionHandling.Abstractions.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
