--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
@@ -1,14 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
-    <Version>1.0.0-beta1</Version>
+    <Version>2.0.0-beta1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>Jiang Jin Nan</Authors>
+    <Company>Artech</Company>
+    <Product>Dora</Product>
+    <Description>Dora.ExceptionHandling is a policy driven automatic exception handling framework. This package enable us of defining exception handling policy using JSON based configuration file.</Description>
+    <PackageLicenseUrl>http://www.doranet.org/nuget-license</PackageLicenseUrl>
+    <PackageProjectUrl>http://www.doranet.org</PackageProjectUrl>
+    <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
+    <PackageTags>Dora, Excpetion Handling</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp1.1\.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp2.0\Dora.ExceptionHandling.Configuration.xml</DocumentationFile>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <TreatSpecificWarningsAsErrors />
   </PropertyGroup>
