--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Dora.ExceptionHandling.Abstractions.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Abstractions/Dora.ExceptionHandling.Abstractions.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0-preview1-final" />
   </ItemGroup>
 
   <ItemGroup>
