--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Configuration/Dora.ExceptionHandling.Configuration.csproj
@@ -25,8 +25,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="1.1.1" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="2.0.0-preview1-final" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
