--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.ExceptionHandlers/Dora.ExceptionHandling.ExceptionHandlers.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.ExceptionHandlers/Dora.ExceptionHandling.ExceptionHandlers.csproj
@@ -25,7 +25,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0-preview1-final" />
   </ItemGroup>
 
   <ItemGroup>
