--- a/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Mvc/Dora.ExceptionHandling.Mvc.csproj
+++ b/src/Dora.ExceptionHandling/Dora.ExceptionHandling.Mvc/Dora.ExceptionHandling.Mvc.csproj
@@ -25,9 +25,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="1.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.0.0-preview1-final" />
   </ItemGroup>
 
   <ItemGroup>
