--- a/demo/Interception/App1/App1.csproj
+++ b/demo/Interception/App1/App1.csproj
@@ -6,8 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dora.Interception.Castle" Version="2.0.0-beta1" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\Dora.Interception\Dora.Interception.Castle\Dora.Interception.Castle.csproj" />
   </ItemGroup>
 
 </Project>
