--- a/demo/Interception/App3/App3.csproj
+++ b/demo/Interception/App3/App3.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Dora.Interception\Dora.Interception.Castle\Dora.Interception.Castle.csproj" />
+    <ProjectReference Include="..\..\..\src\Dora.Interception\Dora.Interception\Dora.Interception.csproj" />
   </ItemGroup>
 
 </Project>
