--- a/test/DynamicProxy/Dora.DynamicProxy.Test/Dora.DynamicProxy.Test.csproj
+++ b/test/DynamicProxy/Dora.DynamicProxy.Test/Dora.DynamicProxy.Test.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
+      <SignAssembly>True</SignAssembly>
+      <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
