--- a/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
+++ b/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
@@ -9,7 +9,7 @@
       <Company>Artech</Company>
       <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
       <Product>Dora</Product>
-      <Version>2.1.1-beta1</Version>
+      <Version>2.1.2</Version>
       <PackageTags>Dependency Injection, DI, AOP, Interception, Proxy</PackageTags>
       <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
       <PackageLicenseUrl>http://www.doranet.org/nuget-license</PackageLicenseUrl>
