--- a/src/Dora.Interception/Dora.Interception.Castle/Dora.Interception.Castle.csproj
+++ b/src/Dora.Interception/Dora.Interception.Castle/Dora.Interception.Castle.csproj
@@ -10,12 +10,13 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Product>Dora</Product>
-    <Version>2.1.2</Version>
+    <Version>2.1.3</Version>
     <PackageTags>Dependency Injection, DI, AOP, Interception, Proxy, Castle, Dynamic Proxy</PackageTags>
     <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
     <PackageProjectUrl>http://www.doranet.org</PackageProjectUrl>
     <PackageLicenseUrl>http://www.doranet.org/nuget-license</PackageLicenseUrl>
+    <PackageReleaseNotes>Align with Dora.DynamicProxy 2.1.3</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
