--- a/src/Dora.GraphQL/demo/Demo1/Demo1.csproj
+++ b/src/Dora.GraphQL/demo/Demo1/Demo1.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL.Server.Ui.Playground" Version="3.4.0" />
+    <PackageReference Include="GraphQL.Server.Ui.Voyager" Version="3.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
