--- a/src/Dora.GraphQL/src/GraphQL.Server/GraphQL.Server.csproj
+++ b/src/Dora.GraphQL/src/GraphQL.Server/GraphQL.Server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="2.4.0" />
+    <PackageReference Include="GraphQL.Server.Core" Version="3.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
