--- a/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
+++ b/src/Dora.DynamicProxy/Dora.DynamicProxy/Dora.DynamicProxy.csproj
@@ -2,17 +2,16 @@
 
   <PropertyGroup>
       <TargetFramework>netstandard2.0</TargetFramework>
-      <SignAssembly>True</SignAssembly>
+      <SignAssembly>true</SignAssembly>
       <AssemblyOriginatorKeyFile>..\..\..\Key.snk</AssemblyOriginatorKeyFile>
       <Description>Provide underlying intercepting dynamic proxy generating mechanism for Dora.Interception.</Description>
       <Authors>Jiang Jin Nan</Authors>
       <Company>Artech</Company>
-      <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+      <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
       <Product>Dora</Product>
       <Version>2.1.4</Version>
       <PackageTags>Dependency Injection, DI, AOP, Interception, Proxy</PackageTags>
       <PackageIconUrl>http://www.doranet.org/images/logo.png</PackageIconUrl>
-      <PackageLicenseUrl>http://www.doranet.org/nuget-license</PackageLicenseUrl>
       <PackageProjectUrl>http://www.doranet.org</PackageProjectUrl>
       <RepositoryUrl>https://github.com/jiangjinnan/Dora</RepositoryUrl>
       <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -42,7 +41,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
     <PackageReference Include="System.Linq.Expressions" Version="4.3.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
   </ItemGroup>
