--- a/test/Interception/Dora.Interception.Test/Dora.Interception.Test.csproj
+++ b/test/Interception/Dora.Interception.Test/Dora.Interception.Test.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="policy.txt">
+    <None Update="policy.dora">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
